// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots matches default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown is-medium"
  >
    <label
      class="aje-label"
      for="CustomSelect-4633098791302093"
      id="CustomSelect-5405221014523335"
    >
      Custom dropdown label
    </label>
    <div
      class="aje-combobox"
    >
      <div
        class="aje-popover__wrapper"
      >
        <div
          aria-controls="CustomSelect-7736028714175982"
          aria-describedby=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="CustomSelect-5405221014523335"
          class="aje-combobox__input"
          id="CustomSelect-4633098791302093"
          role="combobox"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </div>
        <div
          class="aje-popover is-full aje-popover-bottom-left"
        >
          <ul
            aria-labelledby="CustomSelect-5405221014523335"
            class="aje-combobox__menu"
            id="CustomSelect-7736028714175982"
            role="listbox"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="aje-combobox__option is-focused"
              role="option"
            >
              Option 1
            </li>
            <li
              aria-selected="false"
              class="aje-combobox__option"
              role="option"
            >
              Option 2
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown--floating is-medium"
  >
    <div
      class="aje-combobox"
    >
      <div
        class="aje-popover__wrapper"
      >
        <div
          aria-controls="CustomSelect-7736028714175982"
          aria-describedby=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="CustomSelect-5405221014523335"
          class="aje-combobox__input"
          id="CustomSelect-4633098791302093"
          role="combobox"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </div>
        <div
          class="aje-popover is-full aje-popover-bottom-left"
        >
          <ul
            aria-labelledby="CustomSelect-5405221014523335"
            class="aje-combobox__menu"
            id="CustomSelect-7736028714175982"
            role="listbox"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="aje-combobox__option is-focused"
              role="option"
            >
              Option 1
            </li>
            <li
              aria-selected="false"
              class="aje-combobox__option"
              role="option"
            >
              Option 2
            </li>
          </ul>
        </div>
        <label
          class="aje-label"
          for="CustomSelect-4633098791302093"
          id="CustomSelect-5405221014523335"
        >
          Custom dropdown label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
